--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                         </a>
                     </li>   
 
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Elden%20Ring">
+                            <img 
+                            src="https://static-cdn.jtvnw.net/ttv-boxart/512953_IGDB-144x192.jpg" 
+                            alt="Imagem do jogo Elden Ring">
+                        </a>
+                    </li>   
+
                 </ul>
             </div>
         </section>
